@@ -1,0 +1,17 @@
+#ifndef H__dfsch__format__
+#define H__dfsch__format__
+
+#include <dfsch/dfsch.h>
+
+#ifdef __cplusplus
+extern "C" {
+#endif
+
+  extern char* dfsch_format(char* string, 
+                             dfsch_object_t* args);
+
+#ifdef __cplusplus
+}
+#endif
+
+#endif
