@@ -781,5 +781,6 @@ void dfsch__native_register(dfsch_object_t *ctx){
   dfsch__wrapper_native_register(ctx);
   dfsch__object_native_register(ctx);
   dfsch__weak_native_register(ctx);
+  dfsch__format_native_register(ctx);
 
 }
